--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
-site_name: NAP Reference Architecture
-repo_url: https://github.com/NAPCORE/NAP-Reference-Architecture
-site_url: https://napcore.github.io/NAP-Reference-Architecture/
-repo_name: NAP-Reference-Architecture
+site_name: NB Reference Architecture
+repo_url: https://github.com/NAPCORE/NB-Reference-Architecture
+site_url: https://napcore.github.io/NB-Reference-Architecture/
+repo_name: NB-Reference-Architecture
 theme:
   name: material
   features:
@@ -10,7 +10,7 @@ theme:
 nav:
   - Home: index.md
   - "The FRAME Architecture": frame.md
-  - "NAP Reference Architecture": nap_architecture.md
+  - "NB Reference Architecture": nap_architecture.md
   - Browsable UML Models:
       - FRAME Repository: uml/frame_repository.md
       - FRAME Meta Model: uml/frame_metamodel.md
